--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\OlodbServer;Database=survey_dev;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
